fix for image spacing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,9 @@ a {
 
 .SectionDescription {
   text-align: center;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-top: 1rem;
 }
 
 .Title {
@@ -103,6 +106,8 @@ a {
   /* margin-bottom: 4rem; */
   bottom: 4rem;
   text-align: center;
+  /* padding-right: 2rem;
+  padding-left: 2rem; */
 }
 
 .menu-overlay {
