--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -17,12 +17,13 @@
   flex-wrap: wrap;
   min-width: 100%;
   max-height: 30%;
+  gap: 0.5em;
   /* border: 1px solid var(--text); */
   /* gap: 1rem; */
 }
 
 .image {
-  width: 33%;
+  width: 30%;
   height: 100%;
   object-fit: contain;
   /* border: 1px solid var(--text); */
